-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0, Lustre 2.5.0, Lustre 2.6.0
-
3
-
12019
Before upgrade, server and client are running 2.5.0 ldiskfs, then upgrade the whole system to lustre-master build #1791, it passed; then downgrade the system to 2.5.0 again, when mounting the OST, got following error:
OST console shows:
Lustre: DEBUG MARKER: == upgrade-downgrade Lustre version and system information == 11:31:49 (1386963109) Lustre: Lustre: Build Version: 2.5.0-RC1--PRISTINE-2.6.32-358.18.1.el6_lustre.x86_64 LNet: Added LNI 10.10.19.53@tcp [8/256/0/180] LNet: Accept secure, port 988 Lustre: DEBUG MARKER: == upgrade-downgrade End == 11:31:52 (1386963112) LDISKFS-fs (sdb1): mounted filesystem with ordered data mode. quota=on. Opts: LustreError: 33847:0:(ofd_fs.c:588:ofd_server_data_init()) lustre-OST0000: unsupported incompat filesystem feature(s) 10 LustreError: 33847:0:(obd_config.c:572:class_setup()) setup lustre-OST0000 failed (-22) LustreError: 33847:0:(obd_config.c:1591:class_config_llog_handler()) MGC10.10.19.62@tcp: cfg command failed: rc = -22 Lustre: cmd=cf003 0:lustre-OST0000 1:dev 2:0 3:f LustreError: 15b-f: MGC10.10.19.62@tcp: The configuration from log 'lustre-OST0000'failed from the MGS (-22). Make sure this client and the MGS are running compatible versions of Lustre. LustreError: 15c-8: MGC10.10.19.62@tcp: The configuration from log 'lustre-OST0000' failed (-22). This may be the result of communication errors between this node and the MGS, a bad configuration, or other errors. See the syslog for more information. LustreError: 33730:0:(obd_mount_server.c:1257:server_start_targets()) failed to start server lustre-OST0000: -22 LustreError: 33730:0:(obd_mount_server.c:1732:server_fill_super()) Unable to start targets: -22 LustreError: 33730:0:(obd_mount_server.c:848:lustre_disconnect_lwp()) lustre-MDT0000-lwp-OST0000: Can't end config log lustre-client. LustreError: 33730:0:(obd_mount_server.c:1426:server_put_super()) lustre-OST0000: failed to disconnect lwp. (rc=-2) LustreError: 33730:0:(obd_config.c:619:class_cleanup()) Device 3 not setup Lustre: server umount lustre-OST0000 complete LustreError: 33730:0:(obd_mount.c:1311:lustre_fill_super()) Unable to mount /dev/sdb1 (-22) [root@wtm-88 ~]#
- is related to
-
LU-3467
Unified request handler on OST
-
- Resolved
-